Separate configuration file into two parts: config and repositories. Move repositories config to remote host and provide api for read and updte it

--- a/config/config.json
+++ b/config/config.json
@@ -3,12 +3,15 @@
     "outputDirectory": "output",
     "outputTargetFile": "__data.json",
     "outputDataFile": "data.json",
-    "outputDataMinFile": "data_min.json",
+    "outputDataMinFile": "data.min.json",
+    "repositoriesFileName": "repositories.json",
     "dataRepository": {
         "user": "tormozz48",
-        "name": "bem-data"
+        "name": "bem-data",
+        "ref": "master"
     },
     "normalize": "false",
+    "localMode": "true",
     "gitAPI": {
         "common": {
             "version": "3.0.0",
@@ -23,392 +26,5 @@
             "host": "github.yandex-team.ru",
             "url": "/api/v3"
         }
-    },
-    "sources": {
-        "private": [
-            {
-                "org": "lego",
-                "repositories": [
-                    {
-                        "name": "islands-components",
-                        "targetDir": "islands-components",
-                        "type": [
-                            "libs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [],
-                            "exclude": []
-                        }
-                    },
-                    {
-                        "name": "islands-page",
-                        "targetDir": "islands-page",
-                        "type": [
-                            "libs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [],
-                            "exclude": []
-                        }
-                    },
-                    {
-                        "name": "islands-user",
-                        "targetDir": "islands-user",
-                        "type": [
-                            "libs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [],
-                            "exclude": []
-                        }
-                    },
-                    {
-                        "name": "islands-search",
-                        "targetDir": "islands-search",
-                        "type": [
-                            "libs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [],
-                            "exclude": []
-                        }
-                    }
-                ]
-            }
-        ],
-        "public": [
-            {
-                "org": "bem",
-                "repositories": [
-                    {
-                        "name": "bem-core",
-                        "targetDir": "bem-core",
-                        "type": [
-                            "docs"
-                        ],
-                        "docDirs": [
-                            "common.docs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [
-                                "v1"
-                            ],
-                            "exclude": [
-                                "v1"
-                            ]
-                        }
-                    },
-                    {
-                        "name": "bem-components",
-                        "targetDir": "bem-components",
-                        "type": [
-                            "libs"
-                        ],
-                        "tags": {
-                            "include": [],
-                            "exclude": []
-                        },
-                        "branches": {
-                            "include": [],
-                            "exclude": []
-                        }
-                    },
-                    {
-                        "name": "bem-method",
-                        "targetDir": "bem-method",
-                        "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "borschik",
-                        "targetDir": "borschik",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "borschik-server",
-                        "targetDir": "borschik-server",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "bem-articles",
-                        "targetDir": "articles/bem-articles",
-                        "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "bem-www",
-                        "targetDir": "bem-www",
-                        "docDirs": [
-                            "content/blog",
-                            "content/tools",
-                            "content/authors",
-                            "content/pages"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "org": "tormozz48",
-                "repositories": [
-                    {
-                        "name": "csso",
-                        "targetDir": "csso",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "user": "AndreyGeonya",
-                "repositories": [
-                    {
-                        "name": "firmCardStory",
-                        "targetDir": "articles/firm-card-story",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "user": "mursya",
-                "repositories": [
-                    {
-                        "name": "bem-news",
-                        "targetDir": "blog/bem-news",
-                        "docDirs": [],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "user": "veged",
-                "repositories": [
-                    {
-                        "name": "xjst",
-                        "targetDir": "xjst",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "user": "svg",
-                "repositories": [
-                    {
-                        "name": "svgo",
-                        "targetDir": "svgo",
-                        "docDirs": [
-                            "docs"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "master"
-                            ],
-                            "exclude": [
-                                "master"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            },
-            {
-                "user": "lesanra",
-                "repositories": [
-                    {
-                        "name": "setochka",
-                        "targetDir": "setochka",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "ometa-js",
-                        "targetDir": "ometa-js",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
-                    },
-                    {
-                        "name": "gonzales",
-                        "targetDir": "gonzales",
-                        "docDirs": [
-                            "doc"
-                        ],
-                        "type": [
-                            "docs"
-                        ],
-                        "branches": {
-                            "include": [
-                                "bem-info-data"
-                            ],
-                            "exclude": [
-                                "bem-info-data"
-                            ]
-                        },
-                        "tags": []
-                    }
-                ]
-            }
-        ]
     }
 }
