Use semver npm module for tags sorting

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "highlight.js": "7",
     "sha1": "1.0.0",
     "q-io": "~1.10.6",
-    "jspath": "~0.2.10"
+    "jspath": "~0.2.10",
+    "semver": "2.2.1"
   }
 }
