--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "q-io": "~1.10.6",
     "nconf": "~0.6.8",
     "lodash": "2.4.1",
-    "winston": "0.7.2",
+    "intel": "0.4.0",
     "github": "git://github.com/whentomanage/node-github.git",
     "rimraf": "~2.2.4",
     "semver": "2.2.1"
