Split git clone command into two separate commands. Remove git checkout after repo initialization

--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,7 @@
     "dataConfig": {
         "user": "tormozz48",
         "repo": "bem-data",
-        "ref": "dev1",
+        "ref": "master",
         "private": "false"
     },
     "gitAPI": {
