Fix some issues for init task

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "logLevel": "debug",
     "dataConfig": {
-        "type": "private",
+        "private": "true",
         "user": "lego",
         "repo": "lego-site-data",
         "ref": "master"
