--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "bem-data-source",
-  "version": "0.1.0",
-  "scripts": {
-    "start": "node src/make.js",
-    "build": "make build",
-    "test": "make lint"
-  },
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/bem/bem-data-source.git"
@@ -25,7 +20,8 @@
     "github": "git://github.com/whentomanage/node-github.git",
     "marked": "git://github.com/dab/marked.git",
     "highlight.js": "7",
-    "borschik": "~1.0.4"
+    "borschik": "~1.0.4",
+    "coa": "~0.4.0"
   },
   "devDependencies": {
     "jshint": "2.4.1",
