Update version of jshint. Add nonbsp option

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
     "latedef"       : "nofucn",
     "noarg"         : true,
     "noempty"       : true,
+    "nonbsp"        : true,
     "nonew"         : true,
     "undef"         : true,
     "unused"        : true,
