--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
+    "express": "4.x",
+    "body-parser": "1.8.1",
+    "multer": "0.1.4",
+    "errorhandler": "1.2.0",
     "vow": "~0.4.1",
     "vow-fs": "~0.3.0",
     "nconf": "~0.6.8",
@@ -25,7 +29,9 @@
     "github": "*",
     "marked": "git://github.com/dab/marked.git",
     "coa": "~0.4.0",
-    "fs-extra": "~0.8.1"
+    "fs-extra": "~0.8.1",
+    "fstream": "1.0.2",
+    "tar": "1.0.1"
   },
   "devDependencies": {
     "jshint": "2.5.5",
