--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "express": "4.x",
     "body-parser": "1.8.1",
-    "multer": "0.1.4",
-    "errorhandler": "1.2.0",
+    "request": "2.42.0",
     "vow": "~0.4.1",
     "vow-fs": "~0.3.0",
     "nconf": "~0.6.8",
@@ -31,7 +30,8 @@
     "coa": "~0.4.0",
     "fs-extra": "~0.8.1",
     "fstream": "1.0.2",
-    "tar": "1.0.1"
+    "tar": "1.0.1",
+    "cron": "1.0.1"
   },
   "devDependencies": {
     "jshint": "2.5.5",
