--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,8 @@
 {
     "logLevel": "debug",
-    "languages": ["en", "ru"]
+    "languages": ["en", "ru"],
+    "server": {
+        "host": "127.0.0.1",
+        "port": 3000
+    }
 }
