--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "4.x",
+    "serve-static": "~1.1.0",
     "body-parser": "1.8.1",
     "request": "2.42.0",
     "vow": "~0.4.1",
@@ -34,6 +35,13 @@
     "cron": "1.0.1"
   },
   "devDependencies": {
+    "bower": "~1.3.9",
+    "enb": "0.13.4",
+    "enb-autoprefixer": "0.1.1",
+    "enb-bemxjst": "1.2.0",
+    "enb-diverse-js": "0.1.0",
+    "enb-modules": "0.1.2",
+    "enb-stylus": "^1.1.4",
     "jshint": "2.5.5",
     "jscs": "1.5.9"
   },
