Implement 2-column lib - version menu

--- a/src/common.blocks/menu-wrapper/menu-wrapper.deps.yaml
+++ b/src/common.blocks/menu-wrapper/menu-wrapper.deps.yaml
@@ -2,3 +2,5 @@
   mods: { theme: normal, select: check, size: m, mode: radio }
   required: true
 - block: menu-item
+- block: link
+  mods: { theme: normal }
