--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "fs-extra": "~0.8.1",
     "fstream": "1.0.2",
     "tar": "1.0.1",
-    "cron": "1.0.1"
+    "cron": "1.0.1",
+    "rsync": "0.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
