--- a/src/common.blocks/header/header.deps.yaml
+++ b/src/common.blocks/header/header.deps.yaml
@@ -3,3 +3,5 @@
 
 - block: link
   mods: { theme: normal }
+- block: button
+  mods: { theme : 'normal', size : 'm', type : 'link', view: 'action' }
