--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "fstream": "1.0.2",
     "tar": "1.0.1",
     "cron": "1.0.1",
-    "rsync": "0.3.0"
+    "rsync": "0.3.0",
+    "semver": "~2.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
