Change templates and styles for version, panel and dependencies blocks

--- a/src/common.blocks/version/version.deps.yaml
+++ b/src/common.blocks/version/version.deps.yaml
@@ -2,6 +2,10 @@
   - url
   - docs
   - dependencies
+  - remove
+  - ref
+  - body
 - block: link
   mods: { theme: normal }
 - block: dependencies
+- block: panel
