--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "express": "4.x",
-    "serve-static": "~1.1.0",
-    "body-parser": "1.8.1",
     "request": "2.42.0",
     "vow": "~0.4.1",
     "vow-fs": "~0.3.0",
@@ -32,18 +29,9 @@
     "fs-extra": "~0.8.1",
     "fstream": "1.0.2",
     "tar": "1.0.1",
-    "cron": "1.0.1",
-    "rsync": "0.3.0",
-    "semver": "~2.3.0"
+    "rsync": "0.3.0"
   },
   "devDependencies": {
-    "bower": "~1.3.9",
-    "enb": "0.13.4",
-    "enb-autoprefixer": "0.1.1",
-    "enb-bemxjst": "1.2.0",
-    "enb-diverse-js": "0.1.0",
-    "enb-modules": "0.1.2",
-    "enb-stylus": "^1.1.4",
     "jshint": "2.5.5",
     "jscs": "1.5.9"
   },
