Implement compress of examples by portions of files

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "logLevel": "debug",
     "languages": ["en", "ru"],
+    "maxOpenFiles": 100,
     "server": {
         "host": "127.0.0.1",
         "port": 3000
