Implement saving example file in cocaine storage

--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,11 @@
     "server": {
         "host": "127.0.0.1",
         "port": 3000
+    },
+    "cocaine": {
+        "storage": {
+            "debug": false,
+            "namespace": "lego-site-data:master"
+        }
     }
 }
