--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "fstream": "1.0.2",
     "tar": "1.0.1",
     "rsync": "0.3.0",
-    "glob": "4.2.1"
+    "glob": "4.2.1",
+    "assert": "^1.1.2",
+    "cocaine": "^0.4.1-6",
+    "optimist": "^0.6.1"
   },
   "devDependencies": {
     "jshint": "2.5.5",
