--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "~0.8.1",
     "fstream": "1.0.2",
     "tar": "1.0.1",
+    "sha1": "~1.1.0",
     "rsync": "0.3.0",
     "glob": "4.2.1",
     "assert": "^1.1.2",
