Modify documentation. Add missed jsdocs. Add ability to set namespace for storage from API commands

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "ds": "./bin/ds"
   },
   "scripts": {
-    "deps": "cp config/_private.json config/private.json",
+    "config": "cp config/_private.json config/private.json",
     "test": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
   },
   "readmeFilename": "README.md",
