--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   },
   "scripts": {
     "config": "cp config/_private.json config/private.json",
-    "test": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
+    "test": "./node_modules/.bin/mocha",
+    "codestyle": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
   },
   "readmeFilename": "README.md",
   "licenses": [
