Add test/test-data/data.json to .gitignore configuration file. Restore previous npm test alias for codestyle check

--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "scripts": {
     "config": "cp config/_private.json config/private.json",
-    "test": "./node_modules/.bin/mocha",
-    "codestyle": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
+    "mocha": "",
+    "test": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
   },
   "readmeFilename": "README.md",
   "licenses": [
