Restore mocha test alias

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "config": "cp config/_private.json config/private.json",
-    "mocha": "",
+    "mocha": "node_modules/.bin/mocha",
     "test": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
   },
   "readmeFilename": "README.md",
