--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "mocha": "~2.0.1",
+    "should": "~3.3.1",
     "jshint": "~2.5.10",
     "jscs": "~1.8.1"
   },
