Make replace doc command consistent to other api

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "config": "cp config/_private.json config/private.json",
     "mocha": "node_modules/.bin/mocha",
-    "istanbul": "istanbul cover ./node_modules/mocha/bin/_mocha && istanbul report json-summary",
+    "istanbul": "istanbul cover ./node_modules/mocha/bin/_mocha",
     "test": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js ."
   },
   "readmeFilename": "README.md",
