--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vow": "~0.4.1",
     "vow-fs": "~0.3.0",
     "nodemailer": "1.3.0",
-    "nodemailer-smtp-transport": "0.1.3"
+    "nodemailer-smtp-transport": "0.1.3",
+    "mds-wrapper": "^1.1.x"
   },
   "devDependencies": {
     "mocha": "~2.1.0",
