--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     "fs-extra": "^0.16.x",
     "github": "~0.2.x",
     "glob": "4.3.x",
+    "glob-all": "^3.0.1",
     "inherit": "^2.2.x",
     "intel": "^1.0.x",
     "lodash": "^3.1.x",
     "marked": "git://github.com/dab/marked.git",
+    "mds-wrapper": "^1.2.x",
     "nconf": "~0.7.1",
+    "nodemailer": "1.3.0",
+    "nodemailer-smtp-transport": "0.1.3",
     "request": "^2.53.x",
     "rsync": "^0.4.0",
     "sha1": "~1.1.0",
     "vow": "~0.4.1",
-    "vow-fs": "~0.3.0",
-    "nodemailer": "1.3.0",
-    "nodemailer-smtp-transport": "0.1.3",
-    "mds-wrapper": "^1.2.x"
+    "vow-fs": "~0.3.0"
   },
   "devDependencies": {
     "mocha": "~2.1.x",
