--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
+    "chalk": "^1.0.0",
     "coa": "^0.4.x",
     "easy-table": "0.3.0",
     "fs-extra": "^0.16.x",
@@ -28,6 +29,7 @@
     "lodash": "^3.1.x",
     "marked": "git://github.com/dab/marked.git",
     "mds-wrapper": "^1.2.x",
+    "moment": "^2.9.0",
     "nconf": "~0.7.1",
     "nodemailer": "1.3.0",
     "nodemailer-smtp-transport": "0.1.3",
