--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "vow-fs": "~0.3.0"
   },
   "devDependencies": {
-    "mocha": "~2.1.x",
-    "mocha-lcov-reporter": "0.0.1",
-    "should": "~4.6.x",
+    "mocha": "~2.2.x",
+    "mocha-lcov-reporter": "0.0.x",
+    "should": "~5.2.x",
     "istanbul": "^0.3.x",
     "jshint": "~2.6.x",
     "jscs": "^1.11.x"
