--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
+    "bem-md-renderer": "0.2.0",
     "chalk": "^1.0.0",
     "coa": "^1.0.x",
     "easy-table": "0.3.0",
