--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "mocha": "NODE_ENV=testing node_modules/.bin/mocha",
     "istanbul": "istanbul cover ./node_modules/mocha/bin/_mocha",
     "codestyle": "node_modules/.bin/jshint . && node_modules/.bin/jscs -c .jscs.js .",
-    "cover": "istanbul cover _mocha",
+    "cover": "NODE_ENV=testing istanbul cover _mocha",
     "coveralls": "npm install coveralls && npm run cover && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "test": "npm run coveralls"
   },
