--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bem-md-renderer": "0.2.0",
     "bem-site-logger": "^0.0.x",
+    "bem-site-mail-sender": "^0.0.x",
     "chalk": "^1.0.0",
     "coa": "^1.0.x",
     "easy-table": "0.3.0",
