--- a/package.json
+++ b/package.json
@@ -20,21 +20,17 @@
     "bem-md-renderer": "0.2.0",
     "bem-site-logger": "^0.0.x",
     "bem-site-mail-sender": "^0.0.x",
-    "chalk": "^1.0.0",
     "coa": "^1.0.x",
     "easy-table": "0.3.0",
-    "fs-extra": "^0.16.x",
+    "fs-extra": "^0.18.x",
     "github": "~0.2.x",
     "glob": "^5.0.x",
     "glob-all": "^3.0.1",
     "inherit": "^2.2.x",
     "lodash": "^3.1.x",
-    "marked": "git://github.com/dab/marked.git",
+    "marked": "^0.x",
     "mds-wrapper": "^1.3.x",
-    "moment": "^2.9.0",
     "nconf": "~0.7.1",
-    "nodemailer": "1.3.0",
-    "nodemailer-smtp-transport": "0.1.3",
     "request": "^2.53.x",
     "rsync": "^0.4.0",
     "sha1": "~1.1.0",
@@ -45,9 +41,9 @@
   "devDependencies": {
     "mocha": "~2.2.x",
     "mocha-lcov-reporter": "0.0.x",
-    "should": "~5.2.x",
+    "should": "^6.x",
     "istanbul": "^0.3.x",
-    "jshint": "~2.6.x",
+    "jshint": "^2.7.x",
     "jscs": "^1.11.x"
   },
   "bin": {
