--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nconf": "~0.7.1",
     "request": "^2.53.x",
     "rsync": "^0.4.0",
+    "semver": "^5.6.0",
     "sha1": "~1.1.0",
     "vow": "~0.4.1",
     "vow-fs": "~0.3.0",
